--- a/app/sass/blocks/index.sass
+++ b/app/sass/blocks/index.sass
@@ -1,35 +1,197 @@
-.main
-	padding: 0
-	.inner
-		margin: 0
+.header
+	height: 100vh
+	position: relative
+	&__title
+		font-weight: 800
+		font-size: 200px
+		line-height: 156px
+		text-transform: uppercase
+		opacity: 0.0654
+		max-width: 457px
+		position: absolute
+		left: 0
+		top: 0
+		z-index: 4
+
+.slider-dots
+	max-width: 920px
+	width: 100%
+	position: absolute
+	bottom: 0
+	right: 0
+	margin-right: 80px
+	margin-bottom: 41px
+	height: 44px
+	&__item
+		width: 200px
+		position: relative
+		cursor: pointer
+		&::before
+			content: ''
+			background: #fff
+			width: 100%
+			height: 4px
+			position: absolute
+			left: 0
+			top: 0
+		.dot-box
+			width: 100%
+			height: 100%
+			display: flex
+			align-items: end
+			justify-content: space-between
+			&_number
+				font-weight: 800
+				font-size: 34px
+				line-height: 18px
+			&_name
+				font-weight: 300
+				font-size: 16px
+				line-height: 10px
+		// border: 1px solid $accent
+	.swiper-slide-thumb-active
+		&::before
+			background: $accent
+
+
+.slider-item__info
+	position: absolute
+	right: 80px
+	bottom: 116px
+	text-transform: uppercase
+
+.slider-item__info-suptitle
+	margin-bottom: 5px
+.slider-item__info-suptext
+	margin-bottom: 8px
+
+.slider-item__info-title
+	font-weight: 800
+	line-height: 86px
+	font-size: 80px
+	letter-spacing: 0
+	margin-bottom: 48px
+
+.slider-item__info-text
+	font-weight: 800
+	font-size: 40px
+	line-height: 46px
+	letter-spacing: 0
+	margin-bottom: 20px
+
+.arrows-right, .arrows-left
+	width: 24px
+	height: 20px
+	cursor: pointer
+	// background-color: $accent
+
+
+//                                         aside
+
+.header__aside
+	position: absolute
+	top: 0
+	left: 0
+	z-index: 5
+	height: 100vh
+	max-width: 168px
+	border-right: 1px solid rgba(#fff, .25)
+	text-align: center
+	.logo svg
+		width: 168px
+		height: 290px
+
+.menu
+	margin-top: 40px
+	a
 		color: #fff
+		span
+			display: block
+			font-weight: 500
+			font-size: 12px
+			line-height: 14px
+			letter-spacing: 3px
+			margin-top: 6px
+			margin-bottom: 20px
+	.nav-ico-1
+		height: 49px
+		width: 56px
+	.nav-ico-2
+		height: 32px
+		width: 50px
+	.nav-ico-3
+		height: 40px
+		width: 39px
+	.nav-ico-4
+		height: 44px
+		width: 66px
 
-body
-	background-color: #000
-	color: #fff
 
-.tesla, .sony
-	width: 100px
-	fill: red
-	transition: 1s ease-out
-	&:hover
-		fill: green
+.header__search > .search
+	width: 24px
+	height: 24px
+	margin-top: 15px
+	margin-bottom: 35px
 
-	@include media-breakpoint-down(lg) 
-		fill: #00CE9EFF
+.header__location > .map-marker
+	width: 11px
+	height: 13px
+	margin-right: 5px
 
+.header__date
+	font-weight: 800
+	font-size: 72px
+	line-height: 64px
+	span
+		font-weight: 300
+		font-size: 16px
+		line-height: 19px
+		letter-spacing: 2px
+		display: block
+		margin-bottom: 30px
+		padding-top: 15px
 
-.nasa
-	height: 100px
-	width: 100px
-	margin-left: 30px
-	opacity: 0.5
-	transition: 3s ease-out
-	&:hover
-		transform: scale(1.5)
-		opacity: 1
+.header__slider
+	position: relative
+	&-item
+		height: 100vh
+		// background-image: url(../../images/header-bg.jpg)
+		background-repeat: no-repeat
+		background-size: cover
+		background-position: center
+		text-align: right
+		position: relative
+		z-index: 2
+		&::before
+			content: ''
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			background: radial-gradient(circle, rgba(#222222, .43), #0F0F0F)
+			z-index: -1
+	&-navigation
+		position: absolute
+		top: 0
+		right: 0
+		z-index: 10
+		width: 69px
+		display: flex
+		align-items: center
+		justify-content: space-between
+		margin-top: 40px
+		margin-right: 80px
 
-.test 
-	background-color: $accent
-	border-radius: 8px
-	// margin-right: $gutter
+.header__map
+	position: absolute
+	top: 0
+	right: 0
+	z-index: 2
+	// width: 55%
+
+.header__arrows
+	position: absolute
+	left: 210px
+	bottom: 40px
+	z-index: 3
