--- a/app/css/noscript/noscript-styles.css
+++ b/app/css/noscript/noscript-styles.css
@@ -9,3 +9,5 @@
 .bg--travelslider-bg {background-image: url('../../images/travelslider-bg.png');}
 .bg--travelslider-bg {background-image: url('../../images/sleepslider-bg.png');}
 .bg--plane {background-image: url('../../images/plane.png');}
+.bg--flower {background-image: url('../../images/flower.png');}
+.bg--hammok {background-image: url('../../images/hammok.png');}
