--- a/app/sass/blocks/glob.sass
+++ b/app/sass/blocks/glob.sass
@@ -165,9 +165,20 @@ ul, li
 .sleep
 	margin-top: 95px
 
+
+.stars
+	display: inline-block
+	margin-left: 10px
+	.star
+		width: 55px
+		height: 55px
+		margin: 0 -12px
+		padding-bottom: 8px
+
 	//																								стили инпутов
 .quantity 
 	display: inline-block
+	height: 31px
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button
@@ -179,17 +190,16 @@ input[type=number]
 
 .quantity input 
 	width: 45px
-	height: 42px
-	line-height: 1.65
-	float: left
+	height: 31px
 	display: block
 	padding: 0
 	margin: 0
-	padding-left: 20px
 	color: #fff
 	font-weight: 800
-	line-height: 36
+	font-size: 40px
 	background: transparent
+	border: none
+	position: relative
 
 .quantity input:focus 
 	outline: 0
@@ -202,22 +212,13 @@ input[type=number]
 .quantity-button 
 	position: relative
 	cursor: pointer
-	width: 20px
-	text-align: center
-	color: #fff
-	font-size: 13px
-	line-height: 1.7
-	transform: translateX(-100%)
-	user-select: none
-	color: $accent
-	top: 45px
+	top: 35px
 
 .quantity-button.quantity-up 
 	position: absolute
-	height: 50%
-	right: -25px
+	right: 0px
 
 .quantity-button.quantity-down 
 	position: absolute
-	right: 0
-	height: 50%
+	right: 30px
+
