--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,5 +1,7 @@
+@import 'blocks/breakpoints.scss'
 @import 'config'
 @import 'blocks/glob.sass'
 @import 'blocks/index.sass'
+@import 'blocks/media-breakpoints.sass'
 
 
