--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -10,12 +10,11 @@
 //  900 - Black (Heavy)
 
 // Стандартные брейкпоинты Bootstrap 5:
-// xs — 0px
-// sm — 576px
-// md — 768px
-// lg — 992px
-// xl — 1200px
-// xxl — 1400px
+//  sm: 576px
+//  md: 768px
+//  lg: 992px
+//  xl: 1200px
+//  xxl: 1400px
 
 $accent: #4AF6CD // Accent Color
 $textcolor: #ECECECFF // Text Color
@@ -32,7 +31,6 @@ $grid-gutter-width: 20px
 $gutter: $grid-gutter-width
 
 // IMPORT SECTION
-
 @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
 // @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
 
@@ -40,6 +38,7 @@ $gutter: $grid-gutter-width
 // @import 'node_modules/swiper/swiper-bundle'
 
 @import 'node_modules/swiper/swiper-bundle.min'
+@import 'node_modules/locomotive-scroll/dist/locomotive-scroll'
 // расширение файла не пишем ! (css)
 
 // FONTS LOAD SECTION
