--- a/app/sass/blocks/index.sass
+++ b/app/sass/blocks/index.sass
@@ -221,7 +221,10 @@
 	right: 0
 	z-index: 2
 	pointer-events: none
-	// width: 55%
+	.title
+		opacity: 0
+	.line
+		opacity: 0
 
 .header__arrows
 	position: absolute
@@ -237,7 +240,7 @@
 	position: relative
 	background-position: right 330px
 	background-repeat: no-repeat
-	background-size: auto
+	// background-size: auto
 .surf__subtitle
 	text-align: right
 
@@ -772,3 +775,8 @@ footer
 		letter-spacing: 1.05px
 		opacity: 0.5
 
+.big
+	width: 100px
+	height: 100px
+	background-color: $accent
+	position: relative
